--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div id="liontestimonial" class="owl-carousel owl-theme">
                                 <div class="item testimonials">
                                     <img src="images/testimonials/1.jpg" alt="">
-                                    <blockquote>Placeholder
+                                    <blockquote>Mason’s ability and knowledge in website creation is second to none! Thanks to him I have a fully functional website that a number of my customers have commented on saying how well it has been designed and how easy it is to work.
                                         <p class="quote"><span>Ben Robinson</span> - Next Level Fitness</p>
                                     </blockquote>
                                 </div>
