--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                         <i class="ion-ios-telephone-outline"></i>
                                     </div>
                                     <div class="contact-details">
-                                        <h5>Call Us</h5>
+                                        <h5>Call Me</h5>
                                         <p> <a href="tel:07960228501"></a>07960228501</p>
                                     </div>
                                 </div>
